<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:background="#FBF7F7"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/txt_smssherlar"
        android:padding="20sp"
        android:text="@string/sms_nshe_rlar"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="35sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_1"
        app:layout_constraintTop_toBottomOf="@id/txt_smssherlar"
        app:layout_constraintLeft_toLeftOf="@id/txt_smssherlar"
        app:cardBackgroundColor="#FFC107"
        android:layout_width="0dp"
        app:cardCornerRadius="11dp"
        android:layout_marginStart="20dp"
        app:cardElevation="50sp"
        app:layout_constraintHeight_percent="0.122"
        app:layout_constraintWidth_percent="0.4"
        android:layout_height="0dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:contentDescription="@string/imagenews"
                android:layout_marginStart="10dp"
                android:id="@+id/image_saralanganlar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
               android:layout_marginTop="10dp"
                android:src="@drawable/yangilar"
                android:layout_width="20sp"
                android:layout_height="20sp"/>
            <TextView
                android:id="@+id/text_yangilar"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="@id/image_saralanganlar"
                app:layout_constraintBottom_toBottomOf="@id/image_saralanganlar"
                app:layout_constraintLeft_toRightOf="@id/image_saralanganlar"
                android:text="@string/yangilar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/text_yangilarsoni"
                app:layout_constraintTop_toBottomOf="@id/text_yangilar"
                app:layout_constraintLeft_toLeftOf="@id/text_yangilar"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/_202"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                app:layout_constraintLeft_toRightOf="@id/text_yangilarsoni"
                android:text=" ta"
                app:layout_constraintTop_toTopOf="@id/text_yangilarsoni"
                app:layout_constraintBottom_toBottomOf="@id/text_yangilarsoni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.cardview.widget.CardView>

    
    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_2"
        app:layout_constraintTop_toBottomOf="@id/txt_smssherlar"
       app:layout_constraintRight_toRightOf="parent"
        app:cardBackgroundColor="#E91E63"
        android:layout_width="0dp"
        app:cardCornerRadius="11dp"
        android:layout_marginEnd="20dp"
        app:cardElevation="50sp"
        app:layout_constraintHeight_percent="0.122"
        app:layout_constraintWidth_percent="0.4"
        android:layout_height="0dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:contentDescription="@string/saralanganlar"
                android:layout_marginStart="10dp"
                android:id="@+id/image_saralanganlar_2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="10dp"
                android:src="@drawable/saralanganlar"
                android:layout_width="20sp"
                android:layout_height="20sp"/>
            <TextView
                android:id="@+id/text_saralanganlar"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="@id/image_saralanganlar_2"
                app:layout_constraintBottom_toBottomOf="@id/image_saralanganlar_2"
                app:layout_constraintLeft_toRightOf="@id/image_saralanganlar_2"
                android:text="@string/saralanganlar_2"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/text_saralanganlar_soni"
                app:layout_constraintTop_toBottomOf="@id/text_saralanganlar"
                app:layout_constraintLeft_toLeftOf="@id/text_saralanganlar"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/_2"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView

                app:layout_constraintLeft_toRightOf="@id/text_saralanganlar_soni"
                android:text=" ta"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="@id/text_saralanganlar_soni"
                app:layout_constraintBottom_toBottomOf="@id/text_saralanganlar_soni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


  <androidx.cardview.widget.CardView
      android:id="@+id/cardview_sevgisher"
      app:layout_constraintTop_toBottomOf="@id/cardview_1"
      app:layout_constraintRight_toRightOf="@id/cardview_1"
      app:layout_constraintLeft_toLeftOf="@id/cardview_1"
      app:layout_constraintBottom_toTopOf="@id/cardview_tabrik"
      app:layout_constraintHeight_percent="0.14"
      app:layout_constraintWidth_percent="0.4"
      app:cardBackgroundColor="@color/white"
      app:cardCornerRadius="10dp"
      app:cardElevation="5dp"
      android:layout_width="0dp"
      android:layout_height="0dp">
      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:paddingBottom="15dp"
          android:layout_height="match_parent">

          <ImageView
              android:id="@+id/img_sevgi"
              android:src="@drawable/sevgi_sherlari"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintWidth_percent="0.40"
              app:layout_constraintHeight_percent="0.40"
              android:layout_width="0dp"
              android:layout_height="0dp"/>
          <TextView
              android:textColor="@color/black"
              android:text="Sevgi she`rlari"
              android:textSize="11sp"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintTop_toBottomOf="@id/img_sevgi"
              app:layout_constraintBottom_toBottomOf="parent"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>



      </androidx.constraintlayout.widget.ConstraintLayout>


  </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        app:cardElevation="5dp"
        android:id="@+id/cardview_sogincharmon"
        app:layout_constraintTop_toBottomOf="@id/cardview_2"
        app:layout_constraintRight_toRightOf="@id/cardview_2"
        app:layout_constraintLeft_toLeftOf="@id/cardview_2"
        app:layout_constraintBottom_toTopOf="@id/cardview_otaona"
        app:layout_constraintHeight_percent="0.14"
        app:layout_constraintWidth_percent="0.4"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"

        android:layout_width="0dp"
        android:layout_height="0dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:paddingBottom="15dp"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_soginch"
                android:src="@drawable/sogincharmon"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.40"
                app:layout_constraintHeight_percent="0.40"
                android:layout_width="0dp"
                android:layout_height="0dp"/>
            <TextView
                android:textColor="@color/black"
                android:text="Sog`inch Armon"
                android:textSize="11sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_soginch"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>



        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_tabrik"
        app:layout_constraintTop_toBottomOf="@id/cardview_sevgisher"
        app:layout_constraintRight_toRightOf="@id/cardview_sevgisher"
        app:layout_constraintLeft_toLeftOf="@id/cardview_sevgisher"
        app:layout_constraintBottom_toTopOf="@id/cardview_dostlik"
        app:layout_constraintHeight_percent="0.14"
        app:layout_constraintWidth_percent="0.4"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        android:layout_width="0dp"
        android:layout_height="0dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:paddingBottom="15dp"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_tabrik"
                android:src="@drawable/tabrik_sherlar"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.40"
                app:layout_constraintHeight_percent="0.40"
                android:layout_width="0dp"
                android:layout_height="0dp"/>
            <TextView
                android:textColor="@color/black"
                android:text="Tabri she`rlari"
                android:textSize="11sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_tabrik"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>



        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_otaona"
        app:layout_constraintTop_toBottomOf="@id/cardview_sogincharmon"
        app:layout_constraintRight_toRightOf="@id/cardview_sogincharmon"
        app:layout_constraintLeft_toLeftOf="@id/cardview_sogincharmon"
        app:layout_constraintBottom_toTopOf="@id/cardview_hazil"
        app:layout_constraintHeight_percent="0.14"
        app:layout_constraintWidth_percent="0.4"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        android:layout_width="0dp"
        android:layout_height="0dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:paddingBottom="15dp"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_otaona"
                android:src="@drawable/otaona"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.40"
                app:layout_constraintHeight_percent="0.40"
                android:layout_width="0dp"
                android:layout_height="0dp"/>
            <TextView
                android:textColor="@color/black"
                android:text="Ota-Ona xaqida"
                android:textSize="11sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_otaona"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>



        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_dostlik"
        app:layout_constraintTop_toBottomOf="@id/cardview_tabrik"
        app:layout_constraintRight_toRightOf="@id/cardview_tabrik"
        app:layout_constraintLeft_toLeftOf="@id/cardview_tabrik"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.14"
        app:layout_constraintWidth_percent="0.4"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        android:layout_width="0dp"
        android:layout_height="0dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:paddingBottom="15dp"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_dostlik"
                android:src="@drawable/dostlik_sherlar"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.40"
                app:layout_constraintHeight_percent="0.40"
                android:layout_width="0dp"
                android:layout_height="0dp"/>
            <TextView
                android:textColor="@color/black"
                android:text="Do`stlik she`rlari"
                android:textSize="11sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_dostlik"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>



        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_hazil"
        app:layout_constraintTop_toBottomOf="@id/cardview_otaona"
        app:layout_constraintRight_toRightOf="@id/cardview_otaona"
        app:layout_constraintLeft_toLeftOf="@id/cardview_otaona"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.14"
        app:layout_constraintWidth_percent="0.4"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        android:layout_width="0dp"
        android:layout_height="0dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:paddingBottom="15dp"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_hazil"
                android:src="@drawable/hazil_sherlar"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.40"
                app:layout_constraintHeight_percent="0.40"
                android:layout_width="0dp"
                android:layout_height="0dp"/>
            <TextView
                android:textColor="@color/black"
                android:text="Hazil she`rlari"
                android:textSize="11sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_hazil"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>



        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>